--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.58.4",
     "react-native-base64": "0.0.2",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
