--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.0",
+    "react-native-onesignal": "^3.6.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
     "save": "^2.3.3"
